tests/rpm-pkgs/rsyslog-8.2102.0-4.fc35/output-exp@symbiotic/scan-results.err
Error: COMPILER_WARNING:
rsyslog-8.2102.0/runtime/conf.c:168:9: warning[-Wvoid-pointer-to-enum-cast]: cast to smaller integer type 'enum eDirective' from 'void *'
#        eDir = (enum eDirective) pVal;  /* this time, it actually is NOT a pointer! */
#               ^~~~~~~~~~~~~~~~~~~~~~
#  166|   	assert(p != NULL);
#  167|   
#  168|-> 	eDir = (enum eDirective) pVal;	/* this time, it actually is NOT a pointer! */
#  169|   
#  170|   	if(getSubString(&p, szName, sizeof(szName), ',')  != 0) {

Error: COMPILER_WARNING (CWE-563):
rsyslog-8.2102.0/runtime/nsd_ptcp.c:191:14: warning[-Wunused-variable]: unused variable 'pThis'
#        nsd_ptcp_t *pThis = (nsd_ptcp_t*) pNsd;
#                    ^
#  189|   SetTlsVerifyDepth(nsd_t __attribute__((unused)) *pNsd, int verifyDepth)
#  190|   {
#  191|-> 	nsd_ptcp_t *pThis = (nsd_ptcp_t*) pNsd;
#  192|   	DEFiRet;
#  193|   	ISOBJ_TYPE_assert((pThis), nsd_ptcp);
